<resources>
    <string name="app_name">AndroidTemplate</string>
    <string name="increment_count_by_one">Increment count by one</string>
    <string name="day_night_theme_image">Day Night Theme Image</string>
    <string name="enter_package_name">Enter package name</string>
    <string name="check">Check</string>
    <string name="com_whatsapp">com.whatsapp</string>
    <string name="installed">Installed</string>
    <string name="not_installed">Not installed</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="check_app_availability">Check app availability</string>
    <string name="calender_range">Calender range</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date_can_t_bigger_than_end_date">Start date can\'t bigger than end date</string>
    <string name="both_date_can_t_be_same">Both date can\'t be same</string>
    <string name="submit">Submit</string>
    <string name="success">Success</string>
    <string name="full_name">Fullname</string>
    <string name="enter_full_name">Enter fullname</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="user_added">User added</string>
    <string name="user_updated">User updated</string>
    <string name="room_dabase">Room database</string>
    <string name="coil_image_loading">Coil image loading</string>
    <string name="get_data_from_server">Get data from server</string>
    <string name="please_make_sure_your_wifi_or_mobile_data_have_internet_connection">Please make sure your Wifi or mobile data have internet connection.</string>
    <string name="no_network_available">No network available!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="image_zoom">Image zoom</string>
    <string name="contacts">Contacts</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="contact_will_be_deleted">Contact will be deleted</string>
    <string name="ok">Ok</string>
    <string name="_cancel">Cancel</string>
    <string name="circle_menu">Circle Menu</string>

    <!--    For Circle-Menu-->
    <array name="icons">
        <item>@drawable/ic_play</item>
        <item>@drawable/ic_pause</item>
        <item>@drawable/ic_add_24</item>
        <item>@drawable/ic_calendar</item>
        <item>@drawable/ic_light_mode</item>
    </array>
    <array name="colors">
        <item>@android:color/holo_blue_light</item>
        <item>@android:color/holo_green_dark</item>
        <item>@android:color/holo_red_light</item>
        <item>@android:color/holo_purple</item>
        <item>@android:color/holo_orange_light</item>
    </array>
    <!--    End-->
    <string name="add_new_item">Add new item</string>
    <string name="diff_util">Diff Util</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xml_parsing">Xml Parsing</string>
    <string name="parsing_online_data">Parsing Online data</string>
    <string name="parsing_local_data">Parsing local data</string>
    <string name="take_single_permission">Take single permission</string>
    <string name="take_multiple_permission">Take multiple permission</string>
    <string name="dexter_permission">Dexter runtime permission</string>
    <string name="custom_views">Custom views</string>
    <string name="useful_views">Useful views</string>
    <string name="functionalities">Functionalities</string>
    <string name="views">Views</string>
    <string name="ui_ux">UI/UX</string>
    <string name="pick_image">Pick Image</string>
    <string name="take_permission">Take Permissions</string>
    <string name="activity_contract">Activity Contract</string>
    <string name="row">Row</string>
    <string name="column">Column</string>
    <string name="create">Create</string>
    <string name="matrix_creation">Matrix Creation</string>

</resources>