<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.check_app_installed.CheckAppInstalledFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp_4"
        android:gravity="center">

        <TextView
            android:id="@+id/tvEnterPackageName"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_package_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPackageName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/com_whatsapp"
            app:layout_constraintEnd_toEndOf="@+id/tvEnterPackageName"
            app:layout_constraintStart_toStartOf="@+id/tvEnterPackageName"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterPackageName" />

        <Button
            android:id="@+id/btnCheck"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPackageName" />

        <TextView
            android:id="@+id/tvStatus"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCheck"
            tools:text="@string/enter_package_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>